--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,32 @@ black==22.6.0
     # via -r requirements.in
 build==0.8.0
     # via pip-tools
+cfgv==3.3.1
+    # via pre-commit
 click==8.1.3
     # via
     #   black
     #   pip-tools
+distlib==0.3.6
+    # via virtualenv
+filelock==3.8.0
+    # via virtualenv
+flake8==5.0.4
+    # via -r requirements.in
+identify==2.5.3
+    # via pre-commit
 isort==5.10.1
     # via -r requirements.in
+mccabe==0.7.0
+    # via flake8
+mypy==0.971
+    # via -r requirements.in
 mypy-extensions==0.4.3
-    # via black
+    # via
+    #   black
+    #   mypy
+nodeenv==1.7.0
+    # via pre-commit
 packaging==21.3
     # via build
 pathspec==0.9.0
@@ -25,14 +43,31 @@ pep517==0.13.0
 pip-tools==6.8.0
     # via -r requirements.in
 platformdirs==2.5.2
-    # via black
+    # via
+    #   black
+    #   virtualenv
+pre-commit==2.20.0
+    # via -r requirements.in
+pycodestyle==2.9.1
+    # via flake8
+pyflakes==2.5.0
+    # via flake8
 pyparsing==3.0.9
     # via packaging
+pyyaml==6.0
+    # via pre-commit
+toml==0.10.2
+    # via pre-commit
 tomli==2.0.1
     # via
     #   black
     #   build
+    #   mypy
     #   pep517
+typing-extensions==4.3.0
+    # via mypy
+virtualenv==20.16.4
+    # via pre-commit
 wheel==0.37.1
     # via pip-tools
 
